--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador/Desencriptador</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/script.js"></script> <!-- Corregido: uso de 'defer' para asegurar que el script se cargue después del HTML -->
+    <link rel="manifest" href="manifest.json"> <!-- Manifest añadido -->
+    <script defer src="js/script.js"></script>
 </head>
 <body>
     <header id="header">
