--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Encriptador/Desencriptador</title>
     <link rel="icon" href="assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="manifest" href="manifest.json"> <!-- Manifest añadido -->
+    <link rel="manifest" href="manifest.json"> 
     <script defer src="js/script.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-messaging.js"></script>
-</head>
+  </head>
 <body>
     <header id="header">
         <div>
@@ -37,6 +35,7 @@
         <div class="button-group">
             <button id="encriptar" onclick="btnEncriptar()">Encriptar</button>
             <button id="desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
+            <button id="notifications">Habilitar Notificaciones</button>
         </div>
         <p class="nota">Solo letras minúsculas y sin acentos</p>
         <!-- Botón de instalación que aparecerá solo cuando se pueda instalar la PWA -->
