--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <img src="assets/Logo.png" alt="Logo del encriptador">
         </div>
         <div class="button-group">
-            <button id="notifications">Habilitar Notificaciones</button>
             <button id="encriptar" onclick="btnEncriptar()">Encriptar</button>
             <button id="desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
-             
+            <button id="notifications">Habilitar Notificaciones</button> 
         </div>
         <p class="nota">Solo letras minúsculas y sin acentos</p>
+        <!-- Botón de instalación que aparecerá solo cuando se pueda instalar la PWA -->
         
     </div>
     <footer id="footer">
